--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MoGo</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -14,7 +15,7 @@
 <body>
 	<div class="container-fluid wrap">
 		<header class="section section--fon-eagle">
-			<div class="container-fluid">
+			<!---<div class="container-fluid">
 				<div class="row top-nav">
 					<div class="top-nav__logo">
 						<p class="top-nav__label">MoGo</p>
@@ -29,7 +30,31 @@
 							<a href="" class="link fa fa-search top-nav__link"></a>
 						</nav>
 				</div>
-			</div>
+			</div>-->
+			<nav class="navbar default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+  		 <i class="fa fa-bars fa-4x" aria-hidden="true"></i>
+      </button>
+      <div class="navbar-header">
+      <a class="navbar-brand top-nav__label" href="#">MoGo</a>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="" class="link top-nav__link">about</a></li>
+						<li><a href="" class="link top-nav__link">service</a></li>
+						<li><a href="" class="link top-nav__link">work</a></li>
+						<li><a href="" class="link top-nav__link">blog</a></li>
+						<li><a href="" class="link top-nav__link">contact</a></li>
+						<li><a href="" class="link fa fa-cart-plus top-nav__link"></a></li>
+						<li><a href="" class="link fa fa-search top-nav__link"></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 			<section class="container-fluid">
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2 inscr">
@@ -539,7 +564,7 @@
 
 
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>﻿
 
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
