--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			  <div class="container">
 			    <div class="navbar-header">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-			  		 <i class="fa fa-bars fa-4x" aria-hidden="true"></i>
+			  		 <i class="fa fa-bars fa-4x w" aria-hidden="true"></i>
 			      </button>
 			      <div class="navbar-header">
 			      <a class="navbar-brand top-nav__label" href="#">MoGo</a>
@@ -33,8 +33,8 @@
 					<li><a href="" class="link top-nav__link">work</a></li>
 					<li><a href="" class="link top-nav__link">blog</a></li>
 					<li><a href="" class="link top-nav__link">contact</a></li>
-					<li><a href="" class="link fa fa-cart-plus top-nav__link"></a></li>
-					<li><a href="" class="link fa fa-search top-nav__link"></a></li>
+					<li><a href="" class="link fa fa-cart-plus w"></a></li>
+					<li><a href="" class="link fa fa-search w"></a></li>
 			      </ul>
 			    </div>
 			  </div>
@@ -72,7 +72,7 @@
 	</header>
 		<section class="container">
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 article inscr">
+				<div class="col-md-8 col-md-offset-2 inscr">
 					<p class="article__item1">What we do</p>
 					<h2 class="article__item2--bigger link">story about us</h2>
 					<span class="line line--red"></span>
@@ -82,13 +82,13 @@
 		</section>
 		<figure class="container">
 			<div class="row pic">
-				<div class="col-lg-4">
+				<div class="col-sm-4">
 					<img class="pic__itself" src="img/comp.png">
 				</div>
-				<div class="col-lg-4">
+				<div class="col-sm-4">
 					<img class="pic__itself" src="img/2.png">
 				</div>
-				<div class="col-lg-4">
+				<div class="col-sm-4">
 					<img class="pic__itself" src="img/3.png">
 				</div>
 			</div>
@@ -96,23 +96,23 @@
 		<section class="container-fluid bluebox">
 			<div class="container">
 				<div class="row ">
-					<div class="col-lg-2 col-lg-offset-1 numbox">
+					<div class="col-md-2 col-md-offset-1 numbox">
 						<p class="numbox__num link">42</p>
 						<p class="numbox__item link">web design projects</p>
 					</div>
-					<div class="col-lg-2 numbox">
+					<div class="col-md-2 numbox">
 						<p class="numbox__num link">123</p>
 						<p class="numbox__item link">happy client</p>
 					</div>
-					<div class="col-lg-2 numbox">
+					<div class="col-md-2 numbox">
 						<p class="numbox__num link">15</p>
 						<p class="numbox__item link">award winner</p>
 					</div>
-					<div class="col-lg-2 numbox">
+					<div class="col-md-2 numbox">
 						<p class="numbox__num link">99</p>
 						<p class="numbox__item link">cup of coffee</p>
 					</div>
-					<div class="col-lg-2 numbox">
+					<div class="col-md-2 numbox">
 						<p class="numbox__num link">24</p>
 						<p class="numbox__item link">members</p>
 					</div>
@@ -189,7 +189,7 @@
 	</section>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 article inscr">
+				<div class="col-md-8 col-md-offset-2 article inscr">
 					<p class="article__item1">Service</p>
 					<h2 class="article__item2--bigger link">what we do</h2>
 					<span class="line line--red"></span>
@@ -200,10 +200,10 @@
 		<section class="container">
 			<div class="row">
 				<div class="article">
-					<div class="col-lg-6 ">
+					<div class="col-md-6 ">
 						<img class="article_photo" src="img/4.png">
 					</div>
-					<div class="col-lg-6">
+					<div class="col-md-6">
 						<div class="panel-group" id="accordion">
 						  <div class="panel openblock ">
 						    <div class="panel-heading ">
@@ -211,13 +211,21 @@
 						      	<i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
 						        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
 						        photography</a>
+						        <a href="#collapse1" data-parent="#accordion" data-toggle="collapse">
+			    				<span class="glyphicon glyphicon-chevron-down"></span></a>
 						      </h4>
 						    </div>
 						    <div id="collapse1" class="panel-collapse collapse in openblock">
-						      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+						      <div class="panel-body "><p class="article__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 						      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 						      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						      commodo consequat.</div>
+						      commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+						      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						      commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+						      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						      commodo consequat.</p></div>
 						    </div>
 						  </div>
 						  <div class="panel openblock">
@@ -226,13 +234,18 @@
 						      	<i class="fa fa-cogs fa-2x" aria-hidden="true"></i>
 						        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
 						        creativity</a>
+								<a href="#collapse2" data-parent="#accordion" data-toggle="collapse">
+						        <span class="glyphicon glyphicon-chevron-down"></span></a>
 						      </h4>
 						    </div>
 						    <div id="collapse2" class="panel-collapse collapse">
-						      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+						      <div class="panel-body"><p class="article__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 						      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 						      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						      commodo consequat.</div>
+						      commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+						      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						      commodo consequat.</p></div>
 						    </div>
 						  </div>
 						  <div class="panel openblock">
@@ -240,14 +253,14 @@
 						      <h4 class="panel-title icon-box__title--black link">
 						      	<i class="fa fa-bullseye fa-2x" aria-hidden="true"></i>
 						        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-						        web design</a>
+						         web design</a><a href="#collapse3" data-parent="#accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
 						      </h4>
 						    </div>
 						    <div id="collapse3" class="panel-collapse collapse">
-						      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+						      <div class="panel-body"><p class="article__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 						      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 						      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						      commodo consequat.</div>
+						      commodo consequat.</p></div>
 						    </div>
 						  </div>
 						</div>
@@ -255,7 +268,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="grayblock">
+		<section class="grayblock hidden-sm hidden-xs">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-1 col-xs-1 grayblock__arrow">
@@ -285,22 +298,21 @@
 				</div>
 			</div>
 		</section>
-		<section class="container  visible-md visible-lg">
+		<section class="container visible-md visible-lg">
 			<div class="row">
 				<figure class="col-xs-4 men">
-					<img class="men__img" src="img/clearmen.png">
-					<div class="men__hid">
+					<div class="m en__hid">
 						<img class="men__img" src="img/clearmen.png">
 
 					</div>
 				</figure>
 				<figure class="col-xs-4 men">
-					<div class="men__hid">
+					<div class="m en__hid">
 						<img class="men__img" src="img/men2.png">
 					</div>
 				</figure>
 				<figure class="col-xs-4 men">
-					<div class="men__hid">
+					<div class="m en__hid">
 						<img class="men__img" src="img/jw.png">
 					</div>
 				</figure>
@@ -371,12 +383,12 @@
 				<div class="col-xs-4">
 					<div class="row">
 						<div class="col-xs-12">
-							<img class="gallery__img" src="img/6p.jpg">
+							<img class="gallery__img gallery__img--width" src="img/6p.jpg">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12">
-							<img class="gallery__img" src="img/7p.jpg">
+							<img class="gallery__img gallery__img--width" src="img/7p.jpg">
 						</div>
 					</div>
 				</div>
@@ -422,19 +434,19 @@
 			</div>
 		<section class="grayblock--white grayblock">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-1 col-sm-1 grayblock__arrow">
+				<div class="row flex">
+					<div class="col-lg-1 col-sm-1 grayblock__arrow hidden-xs hidden-sm">
 						<a href="#"><li class="fa fa-arrow-left fa-lg"></li></a>
 					</div>
 					<div class="col-lg-2 col-sm-2 ic grayblock__ichat">
-						<img class="sc__img" src="img/girl.png">
+						<img class="grayblock__img" src="img/girl.png">
 					</div>
 					<div class="col-lg-8 col-sm-8 grayblock__comments">
 						<p class="grayblock__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum interdum tortor. Fusce commodo porttitor mauris vel fringilla. Cras ornare tincidunt pretium. Cras ornare tincidunt pretium.</p>
 						<span class="line line--red"></span>
 						<span class="article__item1">Jone Doe</span>
 					</div>
-					<div class="col-lg-1 col-sm-1 grayblock__arrow">
+					<div class="col-lg-1 col-sm-1 grayblock__arrow hidden-xs hidden-sm">
 						<a href="#"><li class="fa fa-arrow-right fa-lg"></li></a>
 					</div>
 				</div>
@@ -451,20 +463,20 @@
 				</div>
 			</div>
 			<section class="container gallery">
-				<div class="row coment">
-					<div class="col-md-2 col-xs-4">
+				<div class="row flex">
+					<div class="col-md-2 col-md-4">
 						<img src="img/c1.png">
 					</div>
-					<div class="col-md-4 col-xs-8 coment">
+					<div class="col-md-4 col-md-8 flex">
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
 						<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </p>
 					</div>
-					<div class="col-md-2 col-xs-4">
+					<div class="col-md-2 col-md-4">
 						<img src="img/c2.png">
 					</div>
-					<div class="col-md-4 col-xs-8 col-xs-8">
+					<div class="col-md-4 col-md-8 flex">
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
@@ -473,20 +485,20 @@
 				</div>
 			</section>
 			<section class="container article">
-				<div class="row coment">
-					<div class="col-md-2 col-xs-4 ">
+				<div class="row coment flex">
+					<div class="col-md-2 col-md-4 ">
 						<img src="img/c3.png">
 					</div>
-					<div class="col-md-4 col-xs-8">
+					<div class="col-md-4 col-md-8 flex">
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
 						<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </p>
 					</div>
-					<div class="col-md-2 col-xs-4">
+					<div class="col-md-2 col-md-4 flex">
 						<img src="img/c4.png">
 					</div>
-					<div class="col-md-4 col-xs-8">
+					<div class="col-md-4 col-md-8 flex">
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
@@ -542,7 +554,7 @@
 				</div>
 			</section>
 	<section class="map">
-		<i class="fa fa-map-marker fa-3x map__item" aria-hidden="true"></i>
+		<i class="fa fa-map-marker fa-3x map__item w" aria-hidden="true"></i>
 		<p class="link map__item">open map</p>
 		<p class="line  map__item line--red"></p>
 	</section>
@@ -552,7 +564,8 @@
 				<div class="col-md-4">
 					<p class="top-nav__label foot__label ">MoGo</p>
 					<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium.</p>
-					<p class="foot__p foot__p--bold">15k</p><p class="foot__p">followers</p>
+					<span class="foot__item icon-box__title--black link">15k </span>
+					<span class="foot__capt article__p">followers</span>
 					<hr>
 					<span class="soc">
 						<a  href="faceboo" class="article__p">Follow Us:</a>
@@ -564,10 +577,10 @@
 						<a  href="faceboo" class="fa fa-lg fa-youtube-play" aria-hidden="true"></a>
 						<a  href="faceboo" class="fa fa-lg fa-vk" aria-hidden="true"></a>
 					</span>
-					<div class="input">
-						<form id="sbsc" method="POST" name="sbsc" class="sbsc">
-							<input type="email" name="email" id="email" placeholder="Your Email" class="sbsc__email">
-							<input type="button" name="button" value="subscribe" class="sbsc__button link">
+					<div class="input foot">
+						<form id="input__form" method="POST" name="sbsc" class="sbsc">
+							<input type="email" name="email" id="email" placeholder="Your Email ..." class="input__email article__p coment__p">
+							<input type="button" name="button" value="subscribe" class="input__button icon-box__title--black link">
 						</form>
 					</div>
 				</div>
@@ -579,8 +592,8 @@
 								<img src="img/blog1.png" alt="photo" class="blog__img">
 							</div>
 							<div class="col-xs-8">
-								<h6 class="icon-box__title--black link blog__p">Lorem ipsum dolor sit amet, consectetur adipiscing</h6>
-								<time class="article__p coment__p">Jan 9, 2017</time>
+								<a href="#" class="icon-box__title--black link blog__p">Lorem ipsum dolor sit amet, consectetur adipiscing</a>
+								<time class=" blog__time article__p coment__p">Jan 9, 2017</time>
 							</div>
 						</div>
 						<div class="row blog__item">
@@ -588,8 +601,8 @@
 								<img src="img/blog2.png" alt="photo" class="blog__img">
 							</div>
 							<div class="col-xs-8">
-								<h6 class="icon-box__title--black link blog__p">Lorem ipsum dolor sit amet, consectetur adipiscing</h6>
-								<time class="article__p coment__p">Jan 9, 2017</time>
+								<a href="#" class="icon-box__title--black link blog__p">Lorem ipsum dolor sit amet, consectetur adipiscing</a>
+								<time class="blog__time article__p coment__p">Jan 9, 2017</time>
 							</div>
 						</div>
 						<div class="row blog__item">
@@ -597,16 +610,16 @@
 								<img src="img/blog3.png" alt="photo" class="blog__img">
 							</div>
 							<div class="col-xs-8">
-								<h6 class="icon-box__title--black link blog__p">Lorem ipsum dolor sit amet, consectetur adipiscing</h6>
-								<time class="article__p coment__p">Jan 9, 2017</time>
+								<a href="№" class="icon-box__title--black link blog__p">Lorem ipsum dolor sit amet, consectetur adipiscing</a>
+								<time class=" blog__time article__p coment__p">Jan 9, 2017</time>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<h6 class="icon-box__title--black link">instagram</h6>
+					<a href="#" class="icon-box__title--black link">instagram</a>
 					<a href="instagram.com"><img src="img/insta.png"></a><br>
-					<a class="article__p coment__p" href="#">View more photos</a>
+					<a href="#" class="article__p coment__p" href="#">View more photos</a>
 				</div>
 			</div>
 			<hr>
