--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="style/style.css">
 <link rel="stylesheet" type="text/css" href="fontawsome/1/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="style/media.css">
 <link rel="stylesheet" type="text/css" href="style/hover.css">
+<link rel="stylesheet" type="text/css" href="style/media.css">
+
 </head>
 <body>
 	<div class="wrap">
@@ -52,7 +52,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="container ">
+			<section class="container hidden-xs">
 				<div class="row">
 					<div class="col-sm-3 line__block">
 						<span class="line__item--wider line"></span>
@@ -221,8 +221,8 @@
 		<section class="container">
 			<div class="row">
 				<div class="article">
-					<div class="col-md-6 ">
-						<img class="article_photo" src="img/4.png">
+					<div class="col-md-6 info__info--md ">
+						<img class="article_photo img-responsive" src="img/4.png">
 					</div>
 					<div class="col-md-6">
 						<div class="panel-group" id="accordion">
@@ -291,19 +291,19 @@
 		</section>
 		<section class="grayblock">
 			<div class="container">
-				<div class="row flex">
-					<div class="col-sm-1  hidden-xs grayblock__arrow">
+				<div class="row">
+					<div class="col-xs-1 grayblock__arrow">
 						<a href="#"><li class="fa fa-arrow-left fa-lg"></li></a>
 					</div>
-					<div class="col-sm-2 ic hidden-xs grayblock__ichat">
+					<div class="col-xs-2 grayblock__ichat info__info--md">
 						<i class="fa fa-comments-o fa-5x" aria-hidden="true"></i>
 					</div>
-					<div class="col-sm-8 grayblock__comments">
+					<div class="col-xs-8 grayblock__comments">
 						<p class="grayblock__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum interdum tortor. Fusce commodo porttitor mauris vel fringilla. Cras ornare tincidunt pretium. Cras ornare tincidunt pretium.</p>
 						<span class="line line--red"></span>
 						<span class="article__item1">Jone Doe</span>
 					</div>
-					<div class="col-sm-1 hidden-xs grayblock__arrow">
+					<div class="col-xs-1 grayblock__arrow">
 						<a href="#"><li class="fa fa-arrow-right fa-lg"></li></a>
 					</div>
 				</div>
@@ -319,7 +319,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="container visible-md visible-lg">
+		<section class="container hidden-xs">
 			<div class="row">
 				<figure class="col-xs-4 men info__item">
 					<div class="info__img">
@@ -371,7 +371,7 @@
 				</figure>
 			</div>
 		</section>
-			<div id="myCarousel" class="carousel slide hidden-md hidden-lg " data-ride="carousel">
+			<div id="myCarousel" class="carousel slide visible-xs " data-ride="carousel">
 			  <ol class="carousel-indicators">
 			    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 			    <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -400,12 +400,12 @@
 			  </a>
 			</div>
 		<div class="container-fluid logo grayblock">
-			<img class="logo__img" src="img/log1.png">
-			<img class="logo__img" src="img/log2.png">
-			<img class="logo__img" src="img/log3.png">
-			<img class="logo__img" src="img/log4.png">
-			<img class="logo__img" src="img/log5.png">
-			<img class="logo__img" src="img/log6.png">
+			<img class="logo__img img-responsive" src="img/log1.png">
+			<img class="logo__img img-responsive" src="img/log2.png">
+			<img class="logo__img img-responsive" src="img/log3.png">
+			<img class="logo__img img-responsive" src="img/log4.png">
+			<img class="logo__img img-responsive" src="img/log5.png">
+			<img class="logo__img img-responsive hidden-sm" src="img/log6.png">
 		</div>
 		<section class="container">
 			<div class="row">
@@ -417,59 +417,33 @@
 				</div>
 			</div>
 		</section>
-		<div class="maingallery hidden-xs hidden-md">
+		<div class="maingallery">
 			<div class="a">
-			<div class="maingallery__box"><div><img src="img/1p.jpg" alt=""></div></div>
-			<div class="maingallery__box"><img src="img/2p.jpg" alt=""></div>
-			<div class="maingallery__box"><img src="img/3p.jpg" alt=""></div>
-			<div class="maingallery__box"><img src="img/4p.jpg" alt=""></div>
+				<div class="a-a">
+				<div class="maingallery__box">
+					<img class="maingallery__photo " src="img/1p.jpg" alt="">
+				</div>
+				<div class="maingallery__box">
+					<img class="maingallery__photo " src="img/2p.jpg" alt="">
+				</div>
+				</div>
+				<div class="a-a">
+				<div class="maingallery__box">
+					<img class="maingallery__photo " src="img/3p.jpg" alt="">
+				</div>
+				<div class="maingallery__box">
+					<img class="maingallery__photo " src="img/4p.jpg" alt="">
+				</div>
+				</div>
 			</div>
-			<div class="b hidden-md">
-			<div class="maingallery__box"><img src="img/5p.jpg" alt=""></div>
+			<div class="b hidden-xs">
+			<div class="maingallery__box hidden-xs"><img class="maingallery__photo hidden-xs" src="img/5p.jpg" alt=""></div>
 			</div>
-			<div class="c hidden-md">
-			<div class="maingallery__box"><img src="img/6p.jpg" alt=""></div>
-			<div class="maingallery__box"><img src="img/7p.jpg" alt=""></div>
+			<div class="c">
+			<div class="maingallery__box"><img class="maingallery__photo " src="img/6p.jpg" alt=""></div>
+			<div class="maingallery__box"><img class="maingallery__photo " src="img/7p.jpg" alt=""></div>
 			</div>
-		</div>
-		<div id="myCarousel" class="carousel slide hidden-md hidden-lg " data-ride="carousel">
-			  <ol class="carousel-indicators">
-			    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			    <li data-target="#myCarousel" data-slide-to="1"></li>
-			    <li data-target="#myCarousel" data-slide-to="2"></li>
-			    <li data-target="#myCarousel" data-slide-to="3"></li>
-			    <li data-target="#myCarousel" data-slide-to="4"></li>
-			    <li data-target="#myCarousel" data-slide-to="5"></li>
-			  </ol>
-			  <div class="carousel-inner">
-			    <div class="item active">
-			     <img src="img/7p.jpg">
-			    </div>
-			    <div class="item">
-			      <img src="img/1p.jpg">
-			    </div>
-			    <div class="item">
-			     <img src="img/2p.jpg">
-			    </div>
-			    <div class="item">
-			    	<img src="img/3p.jpg">
-			    </div>
-			    <div class="item">
-			    	<img src="img/6p.jpg">
-			    </div>
-			    <div class="item">
-			    	<img src="img/6p.jpg">
-			    </div>
-			  </div>
-			  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
-			</div>
+		</div>		
 		<section class="grayblock--white grayblock">
 				<div id="myCarousel" class="carousel slide mycar" data-ride="carousel">
 				  <!-- Indicators -->
@@ -633,10 +607,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 flex">
-						<img class="sc__img img-responsive" src="img/blog3.jpg">
+					<div class="col-md-4 flex ">
+						<img class="sc__img--centerd-sm img-responsive" src="img/blog3.jpg">
 							<hr class="hidden-xs">
-						<div class="info__info">
+						<div class="info__info info__info--md">
 							<h5 class="icon-box__title--black link">Lorem ipsum dolor sit amet</h5>
 							<p class="arti__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do. 
 							Lorem ipsum dolor sit amet</p>
@@ -708,7 +682,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-12">
+				<div class="col-md-4 col-sm-12 flex info__info--md">
 					<h6 href="#" class="icon-box__title--black link">instagram</h6>
 					<a href="instagram.com"><img src="img/insta.png"></a><br>
 					<a href="#" class="article__p coment__p" href="#">View more photos</a>
@@ -718,21 +692,8 @@
 		</section>
 	</footer>
 
-
-
-
-
-
-
-
-
-
-
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>﻿
-
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
