Fix scroll, links hover, gradient hover effect

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						<li><a href="#" class="link top-nav__link">work</a></li>
 						<li><a href="#" class="link top-nav__link">blog</a></li>
 						<li><a href="#" class="link top-nav__link">contact</a></li>
-						<li><a href="#" class="link fa fa-cart-plus w hidden-xs hidden-sm"><span class="hover-line"></span></a></li>
-						<li><a href="#" class="link fa fa-search w hidden-xs hidden-sm"><span class="hover-line"></span></a></li>
+						<li><a href="#" class="link fa fa-cart-plus w hidden-xs hidden-sm"></a></li>
+						<li><a href="#" class="link fa fa-search w hidden-xs hidden-sm"></a></li>
 				      </ul>
 				    </div>
 				  </div>
@@ -43,7 +43,7 @@
 			</header>
 			<section class="container-fluid">
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2 inscr">
+					<div class="col-xs-8 col-xs-offset-2 inscr">
 						<h1 class="insc__item insc__item--font--kaush">Creative Template</h1>
 						<h2 class="insc__item insc__item--size--big link">welcome <br> to mogo</h2>
 						<span class="line"></span><br>
@@ -87,7 +87,7 @@
 				<div class="col-sm-4 pic__item">
 					<div class="pic__img">
 					<div class="pic__trans">
-						<i class="fa fa fa-users fa-4x"></i><br>
+						<i class="fa fa fa-diamond fa-4x"></i><br>
 						<p class="link">Meat our team</p>
 					</div>
 						<img class="pic__itself img-responsive" src="img/comp.png">
@@ -329,7 +329,7 @@
 							<a  href="faceboo" class="fa fa-2x fa-instagram" aria-hidden="true"></a>
 							<a  href="faceboo" class="fa fa-2x fa-pinterest-p" aria-hidden="true"></a>
 						</div>
-						<img class src="img/men2.png">
+						<img class="men__img" src="img/men2.png">
 					</div>
 					<div class="info__caption">
 	              		<span class="info__name icon-box__title--black link">Matthew Dix</span>
@@ -345,7 +345,7 @@
 							<a  href="faceboo" class="fa fa-2x fa-instagram" aria-hidden="true"></a>
 							<a  href="faceboo" class="fa fa-2x fa-pinterest-p" aria-hidden="true"></a>
 						</div>
-						<img src="img/clearmen.png">
+						<img class="men__img" src="img/clearmen.png">
 					</div>
 					<div class="info__caption">
 	              		<span class="info__name icon-box__title--black link">Matthew Dix</span>
@@ -568,7 +568,7 @@
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
-						<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </p>
+						<quote class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </quote>
 					</div>
 					<div class="col-sm-2">
 						<img class="client__img" src="img/c2.png">
@@ -577,7 +577,7 @@
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
-						<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </p>
+						<quote class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </quote>
 					</div>
 				</div>
 			</section>
@@ -590,7 +590,7 @@
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
-						<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </p>
+						<quote class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </quote>
 					</div>
 					<div class="col-sm-2 hidden-xs ">
 						<img class="client__img" src="img/c4.png">
@@ -599,7 +599,7 @@
 						<p class="link--black link">Matthew Dix</p>
 						<p class="article__p coment__p">Graphic Design</p>
 						<span class="line line--red"></span>
-						<p class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </p>
+						<quote class="article__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Fusce bibendum interdum tortor. Cras ornare tincidunt pretium. </quote>
 					</div>
 				</div>
 			</section>
