--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</header>
 			<section class="container-fluid">
 				<div class="row">
-					<div class="col-xs-8 col-xs-offset-2 inscr">
+					<div class="col-md-8 col-md-offset-2 inscr">
 						<h1 class="insc__item insc__item--font--kaush">Creative Template</h1>
 						<h2 class="insc__item insc__item--size--big link">welcome <br> to mogo</h2>
 						<span class="line"></span><br>
